--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -17,3 +17,9 @@
   start: April 2016
   end: August 2016
   link: https://summerofcode.withgoogle.com/archive/2016/projects/5093214348378112/
+
+- name: Samsung R&D Institute, India
+  location: Bangalore
+  position: Student Intern
+  start: May 2015
+  end: July 2015
