experience: update GSoC 2

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -8,7 +8,7 @@
   location: Remote
   position: Mentor
   start: April 2017
-  end: present
+  end: August 2017
   link: https://summerofcode.withgoogle.com/projects/#4556792928403456
 
 - name: Google Summer of Code (Performance Co-Pilot)
