--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,5 +1,5 @@
 - name: Adobe Systems
-  location: Noida
+  location: Bangalore
   position: Member of Technical Staff 2
   start: June 2016
   end: present
