--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -9,7 +9,7 @@
   position: Mentor
   start: April 2017
   end: August 2017
-  link: https://summerofcode.withgoogle.com/projects/#4556792928403456
+  link: https://summerofcode.withgoogle.com/archive/2017/projects/4793296782098432/
 
 - name: Google Summer of Code (Performance Co-Pilot)
   location: Remote
