add kaggle and stackoverflow

--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,9 @@ description: Suyash's Website
 url: "https://suy.io"
 twitter_username: dextrous93
 medium_username: suyash93
-linkedin_username: suyash93
-github_username:  suyash
+github_username: suyash
+kaggle_username: suyash93
+stackoverflow_id: 3673043
 gaid: UA-80985362-2
 
 # Build settings
