--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,7 @@
+- name: stylizer
+  description: Image to image translation experiments.
+  website: https://stylizer.appspot.com
+
 - name: transformer
   description: A Transformer implementation in Keras' Imperative (Subclassing) API for TensorFlow.
   website: https://github.com/suyash/transformer/
@@ -11,8 +15,12 @@
   website: https://github.com/performancecopilot/speed
 
 - name: geopattern
-  description: A rust implementation of geometric patterns with a wasm demo
+  description: A rust implementation of geometric patterns with a WASM demo
   website: https://suy.io/geopattern
+
+- name: grokking-deep-learning-rs
+  description: A rust implementation of deep learning algorithms from the book Grokking Deep Learning
+  website: https://github.com/suyash/grokking-deep-learning-rs
 
 - name: char-rnn
   description: A small character based language model implementation in TensorFlow with tf.data and keras APIs along with a browser demo in TensorFlow.js.
