fix font and add favicon

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 - name: Adobe Systems
   location: Bangalore
-  position: Member of Technical Staff 2
+  position: Software Engineer 3
   start: June 2016
   end: present
 
