--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -2,3 +2,6 @@
   name: Suyash .
   id: US 16/286,365
   status: Filed
+
+- title: Few-Shot Conditional Handwriting Synthesis
+  status: Approved for Filing
