--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -1,7 +1,8 @@
+- title: Few-Shot Conditional Handwriting Synthesis
+  name: Suyash .
+  status: Approved for Filing
+
 - title: Generation of Digital Content Navigation Data
   name: Suyash .
   id: US 16/286,365
   status: Filed
-
-- title: Few-Shot Conditional Handwriting Synthesis
-  status: Approved for Filing
