--- a/_data/patents.yml
+++ b/_data/patents.yml
@@ -1,6 +1,7 @@
-- title: Few-Shot Conditional Handwriting Synthesis
+- title: Digital Handwriting Synthesis
   name: Suyash .
-  status: Approved for Filing
+  id: US 16/813,144
+  status: Filed
 
 - title: Generation of Digital Content Navigation Data
   name: Suyash .
