--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "parcel"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.0.1",
     "parcel": "^2.0.1"
   },
   "source": [
