--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,10 @@ jobs:
         run: |
           if [[ -n $(git status -s -uall) ]];
           then
+            git config user.name "github-actions"
+            git config user.email "github-actions@github.com"
             git add --all
-            git commit --author="github-actions <github-actions@github.com>" -m "build"
+            git commit -m "build"
             git push
           else
             echo "No Changes to Push"
